# DieCast

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/diecast/: __init__.py  config.py  decorator.py  error_utils.py  logging.py  mold.py  type_utils.py
tests/: conftest.py  test_advanced.py  test_any_handling.py  test_config.py  test_decorator.py  test_error_reporting.py  test_integration.py  test_mold.py  test_mro_optimization.py  test_type_info.py
