# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diecast"
version = "0.1.0"  # Starting version
description = "A Python tool to enforce type hints as runtime assertions."
readme = "README.md"
requires-python = ">=3.8" # Specify minimum Python version
# Add dependencies here if needed later, e.g.,
# dependencies = [
#     "some-dependency"
# ]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the 'src' directory 

# Add this section for pytest configuration
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",      # Correct path relative to project root (diecast/)
] 

# Logging configuration - proper options from pytest documentation
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(levelname)-8s %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Remove unsupported 'loggers' option 